# sysy-compiler-buaa2025

./: CMakeLists.txt
.zed/: settings.json
src/: evaluate.cpp  grammer.cpp  grammer.hpp  token.hpp
src/ir/: Type.hpp
